2007-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added installation menu item to self-install into
	Freedesktop desktops (GNOME or KDE).
	Fixed omission in saving the UseTkOnly option.

2007-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:     Added option to prevent the use of ttk widgets. 
	Either start the program with -tkonly or set the checkbox on the
	Options dialog.
	
	* tkchat48.gif:   Created application icon and desktop integration
	* tkchat48.png:   file for Unix (GNOME/KDE) systems.
	* tkchat.desktop:
	* tkchat.tcl:     Fixed a bug when cancelling the font dialog.
	* choosefont/choose_gtk.tcl:

2007-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch #1633074 to add support for highlighting
	when user specified search terms are seen in the chat. (Jos Decoster)

2007-04-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* choosefont/critcl.tcl (loadlib): Fail gracefully if the binary
	cannot be loaded and drop down to the pure-tcl version.
	* tkchat.tcl: Poll (slowly, every 10 minutes) the IRC user list in
	case it has gone adrift. Fixes in the bridge may mean this is no
	longer happening.

2007-04-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Handle state notification messages from clients the
	improperly send them even though we don't ask for them.

2007-03-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add administrative control from tkchat.
	/op /deop /mute /unmute and /kick.
	Added userlist menu items for admin control and display moderators
	separately so they can be identified.
	Fixed very broken registration dialog.
	Automatic version checking from tclers.tk

2007-03-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed a missing backslash in iq handler. Some
	additional status messages and namespace qualifying. Prefer
	panedwindow to paned widget in tile. Add aqua spacer for
	non-tile. Show url's in status bar.
